fixes to login page: removed not needed login.sass; removed fixed string length assumption; fixed login button not showing up in Chrome when the form is pre-filled

--- a/public/stylesheets/sass/login.scss
+++ b/public/stylesheets/sass/login.scss
@@ -84,18 +84,6 @@
         @include opacity(0);
       }
     }
-
-    #remember_me {
-      position: absolute;
-      top: 0;
-      left: 4px;
-    }
-
-    #user_submit {
-      position: absolute;
-      top: -6px;
-      right: 5px;
-    }
   }
 }
 
